centred title in details page

--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,9 @@
     .right{
         margin-left: unset;
     }
+    .title{
+        text-align: center;
+    }
     .general-info{
         display: flex;
         flex-direction: column;
