--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@
 .movie-group {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     padding: 0 6%;
     gap: 24px;
     justify-content: center;
@@ -102,6 +102,12 @@
     color: black;
     font-size: 18px;
     text-align: center;
+}
+
+@media only screen and (max-width : 700px) {
+    .movie-group{
+        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    }
 }
 
 /* for pagination */
@@ -136,17 +142,6 @@
     align-items: center;
     padding: 24px 2%;
     color: white;
-}
-.single-movie::before{
-    content: '';
-    background: url('https://picsum.photos/600/300') no-repeat center center/cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 42vh;
-    width: 100%;
-    opacity: 0.3;
-    z-index: -2;
 }
 .single-movie::after{
     content: '';
