--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@
 @media only screen and (max-width : 700px) {
     .movie-group{
         grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+        padding: 0 2%;
     }
 }
 
