--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,41 @@
 
 }
 
+/* for splash screen */
+.splash{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.splash img{
+    width: 300px;
+    animation-name: rotate;
+    animation-duration: 1.1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotateY(0deg);
+    }25%{
+        transform: rotateY(90deg);
+    }50%{
+        transform: rotateY(180deg);
+    }75%{
+        transform: rotateY(270deg);
+    }100%{
+        transform: rotateY(360deg);
+    }
+}
+
 @media only screen and (max-width: 700px) {
     .single-movie{
         flex-direction: column;
